--- a/WebRoot/css/style.css
+++ b/WebRoot/css/style.css
@@ -1,10 +1,8 @@
 /*@import "menu.css";*/
 /** 清除内外边距 **/
 body, h1, h2, h3, h4, h5, h6, hr, p,
-blockquote, /* structural elements 结构元素 */
 dl, dt, dd, ul, ol, li, /* list elements 列表元素 */
 pre, /* text formatting elements 文本格式元素 */
-form, fieldset, legend, button, input, textarea, /* form elements 表单元素 */
 th, td, /* table elements 表格元素 */
 img/* img elements 图片元素 */{
 border:medium none;
@@ -15,7 +13,6 @@ padding: 0;
 body,button, input, select, textarea {
 font: 12px/1.5 '宋体',tahoma, Srial, helvetica, sans-serif; }
 h1, h2, h3, h4, h5, h6 { font-size: 100%; }
-em{font-style:normal;}
 /** 重置列表元素 **/
 ul, ol { list-style: none; }
 /** 重置超链接元素 **/
@@ -25,7 +22,6 @@ a:hover { text-decoration: underline; color:#3363a7; }
 img{ border:0px;}
 /** 重置表格元素 **/
 table { border-collapse: collapse; border-spacing: 0; }
-
 /*清除浮动*/
 .clear{
 	height:0px;
@@ -36,49 +32,38 @@ table { border-collapse: collapse; border-spacing: 0; }
 .fleft{ float:left;}
 .fright{ float:right}
 #wrap{ width:100%;background-color: #198bc9}
-#header{ height:78px; background:url(../images/index-header-bg.gif) repeat-x;}
+#header{ height:78px; background:url(../images/index-header-bg.gif) repeat-x;margin-bottom: 8px;}
 .logo{ width:362px; height:51px; background:url(../images/index-logo.gif);}
 .logout{ width:23px; height:24px; background:url(../images/index-logout.png); margin-top:14px;}
-.nav ul{ height:51px; overflow:hidden; color:#effaff}
-.nav li{ float:left; padding-top:27px; width:93px; height:51px; background:url(../images/index-nav-bg.png); text-align:center;}
-.nav li:hover{ background-position:0 -52px; cursor:pointer;}
-.nav li a{ color:#effaff}
-.nav li a:hover{ text-decoration:none}
-.nav .first{ background:url(../images/index-nav-firstbg.png);}
-.nav .first:hover{ background-position:0 -52px;}
+
 
 .nav-left{ width:34px; height:51px; background:url(../images/index-nav-left.png);}
 .nav-right{ width:34px; height:51px; background:url(../images/index-nav-right.png);}
 .subnav{ height:27px; background:url(../images/index-subnav-bg.gif)}
 .subnav .subnavLeft{ width:17px; height:27px; background:url(../images/index-subnav-left.gif)}
 .subnav .subnavRight{ width:17px; height:27px; background:url(../images/index-subnav-right.gif)}
-.menu{ width:11%; height:100%; background:#e6f4fa; color:#075587; margin-left:8px;position:absolute;overflow:hidden; z-index:8}
-.menu ul{ width:168px;}
+
+.menu{ width:168px;height:577px;  background:#e6f4fa; color:#075587;overflow:hidden; z-index:8;float: left;}
+.menu ul{ font-size: 12px;width:168px;}
 .menu ul li{ width:168px; background:url(../images/index-menu-bg.gif) no-repeat; text-align:center}
-.menu ul li a{ height:26px; line-height:26px; color:#075587}
+.menu ul li a{ height:26px; line-height:26px; color:#075587;font-size: 12px}
 .menu ul li a:hover{ height:26px; line-height:26px; color:#000; text-decoration:none;}
-.menu .subMenuTitle{ background:url(../images/index-menu-title.gif); text-align:center; height:27px; line-height:26px; color:#fff}
+.menu .subMenuTitle{ background:url(../images/index-menu-title.gif); text-align:center; height:27px; line-height:26px; color:#fff;}
 .menu ul li ul{ width:168px;}
 .menu ul li ul li{ background:url(../images/index-submenu-bg.gif);}
 
 
 
-.sidebar{ width:5px; height:500px;}
-.sidebar .btn{ width:5px; height:39px; background:url(../images/sidebar-on.gif); margin-top:200px;}
-.sidebar .btn:hover{ background-position:0 -39px;}
-.page{ background:#198bc9;width: ;}
-.page iframe{bottom:0;height: 100%;}
-#content .space{ height:5px; font-size:0px; background:#198bc9}
-#main-title{ font-family:Tahoma, Geneva, sans-serif; font-size:50px; text-align:center; color:#075587}
-#main-content{ font-family:Tahoma, Geneva, sans-serif; font-size:30px; text-align:center; color:#000;}
-#main-content b{ color:#F00;}
 
-#footer{ width:100%; height:26px; line-height:26px; background:url(../images/index-footer-bg.gif); text-align:center; color:#effaff}
+
+#content{float:left; margin-left:8px; width:168px;height:100px;  background:#ffffff}
+#content .space{ float:left; width:100%; font-size:0px; background:#198bc9}
+
+
+#footer{ clear:left; width:100%; height:26px; line-height:26px; background:url(../images/index-footer-bg.gif); text-align:center; color:#effaff}
 
 
 .pageTitle{ padding-left:10px; height:31px; line-height:31px; color:#075587; background:url(../images/page-pageTitle-bg.gif); }
-.pageTitle span{ margin-left:10px;}
-.pageButton{ height:50px;}
 
 
 .pageColumn{ background:url(../images/page-bg.gif) repeat-x; padding:5px;}
