--- a/WebRoot/css/login.css
+++ b/WebRoot/css/login.css
@@ -37,10 +37,11 @@ table { border-collapse: collapse; border-spacing: 0; }
 body{ background:#0a76b0}
 #message-box{ height:30px; width:300px; background:#f81900; position:absolute; right:0px; line-height:30px; text-align:center; display:none} 
 #wrap{ width:960px; margin:0 auto; background:url(../images/login-bg.gif); height:613px;}
-#header{ height:170px;}
+#header{ height:130px;}
 #content-wrap{ width:593px; height:357px; background:url(../images/login-bg.png); margin:0 auto;}
 .content{ width:210px; height:237px; margin:0 auto;}
 .space{ height:103px;}
+.logo{font-size: 30px;color: #ffffff;text-align: center;}
 .login-btn{ width:68px; height:28px; background:url(../images/login-btn.gif) -6px -6px;}
 .login-btn:hover{ background-position:-6px -49px;}
 .yzm-box{ width:150px; height:50px; background:#999; position:relative; top:-80px; left:53px; display:none; background:url(../images/yzm.gif)}
