--- a/WebRoot/css/style.css
+++ b/WebRoot/css/style.css
@@ -15,9 +15,9 @@ font: 12px/1.5 '宋体',tahoma, Srial, helvetica, sans-serif; }
 h1, h2, h3, h4, h5, h6 { font-size: 100%; }
 /** 重置列表元素 **/
 ul, ol { list-style: none; }
-/** 重置超链接元素 **/
-a { text-decoration: none; color:#000;}
-a:hover { text-decoration: underline; color:#3363a7; }
+ /** 重置超链接元素 **/
+/*a { text-decoration: none; color:#000;}
+a:hover { text-decoration: underline; color:#3363a7; } */
 /** 重置图片元素 **/
 img{ border:0px;}
 /** 重置表格元素 **/
@@ -33,7 +33,7 @@ table { border-collapse: collapse; border-spacing: 0; }
 .fright{ float:right}
 #wrap{ width:100%;background-color: #198bc9}
 #header{ height:78px; background:url(../images/index-header-bg.gif) repeat-x;margin-bottom: 8px;}
-.logo{ width:362px; height:51px; background:url(../images/index-logo.gif);}
+.logo{  height:51px; background:url(../images/index-logo.png) no-repeat;font-size: 30px;color: #ffffff;padding-left: 70px;} 
 .logout{ width:23px; height:24px; background:url(../images/index-logout.png); margin-top:14px;}
 
 
@@ -53,7 +53,7 @@ table { border-collapse: collapse; border-spacing: 0; }
 .menu ul li ul li{ background:url(../images/index-submenu-bg.gif);}
 
 
-
+.index_bg{width: 750px;height: 550px;margin-left: 150px ;}
 
 
 #content{float:left; margin-left:8px; width:168px;height:100px;  background:#ffffff}
@@ -67,12 +67,13 @@ table { border-collapse: collapse; border-spacing: 0; }
 
 
 .pageColumn{ background:url(../images/page-bg.gif) repeat-x; padding:5px;}
-.pageColumn table{ width:100%}
 .pageColumn thead{ border:1px solid #bfd8e0; color:#075587; background:url(../images/page-thead-bg.gif);}
 .pageColumn thead th{ border-left:1px solid #c5dbe2; text-align:center; height:28px;}
 .pageColumn tbody tr{ border:1px solid #bfd8e0; height:28px;}
-.pageColumn tbody .trLight{ background:#f9fcfd}
+.pageColumn tbody .trLight{ background:#f9fcfd;}
 .pageColumn tbody .checkBox{ background:#f1f7f9; border:1px solid #bfd8e0; text-align:center}
-.pageColumn tbody td{ text-align:center;}
+/* .pageColumn tbody td{ text-align:center;} */
 /* .pageColumn */
-.right{position:absolute;right:0;top:83px;bottom:0; z-index:6;width:88%;height: 20px;}  
+.right{position:absolute;right:0;top:83px;bottom:0; z-index:6;width:88%;height: 20px;}
+
+.userMessage{text-align: right;padding-top: 4px;}
